# v-hacd

./: README.md
data/res/bunny.off_folder/: log.txt
data/res/camel.off_folder/: log.txt
data/res/casting.off_folder/: log.txt
data/res/cow1.off_folder/: log.txt
data/res/cow2.off_folder/: log.txt
data/res/crank.off_folder/: log.txt
src/: CMakeLists.txt
src/VHACD_Lib/: CMakeLists.txt
